tests/toylang/neg/001584_mutation.toylang
program a = { while a bool do sleep; } .
